# algo_practice

./: .gitignore  README.md
.github/workflows/: cpp-check.yaml  python-check.yaml
cpp/: CMakeLists.txt
cpp/include/: search.h
cpp/src/: CMakeLists.txt  dummy.cpp  main.cpp
cpp/src/tests/: CMakeLists.txt  my_test.cpp  test_search.cpp
py/: Makefile  pyproject.toml
py/algo/: search.py  sort.py
py/tests/: test_search.py  test_sort.py
