[project]
name = "algo"
version = "0.1.0"
description = "Algorithms and python tools playground"
requires-python = ">=3.11"

authors = [
    { name = "Viktor Vorobev", email = "vikeyer@gmail.com" }
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
